[gd_scene load_steps=4 format=3 uid="uid://lew87m4qtsu4"]

[ext_resource type="PackedScene" uid="uid://dcv503q4m8ov8" path="res://scenes/petri/bacteria.tscn" id="1_2sx8p"]
[ext_resource type="Script" path="res://scenes/petri/petri.gd" id="1_5fln4"]
[ext_resource type="PackedScene" uid="uid://dugbqpeuo668b" path="res://scenes/petri/food.tscn" id="2_aj5is"]

[node name="Petri" type="Node2D"]
script = ExtResource("1_5fln4")
food_scene = ExtResource("2_aj5is")

[node name="Bacteria" parent="." instance=ExtResource("1_2sx8p")]
position = Vector2(384, 216)

[node name="Eye1" type="ColorRect" parent="."]
offset_right = 40.0
offset_bottom = 40.0

[node name="Eye2" type="ColorRect" parent="."]
offset_left = 40.0
offset_right = 80.0
offset_bottom = 40.0

[node name="Eye3" type="ColorRect" parent="."]
offset_left = 80.0
offset_right = 120.0
offset_bottom = 40.0

[node name="Eye4" type="ColorRect" parent="."]
offset_left = 120.0
offset_right = 160.0
offset_bottom = 40.0

[node name="Eye5" type="ColorRect" parent="."]
offset_left = 160.0
offset_right = 200.0
offset_bottom = 40.0

[node name="Eye6" type="ColorRect" parent="."]
offset_left = 200.0
offset_right = 240.0
offset_bottom = 40.0

[node name="Eye7" type="ColorRect" parent="."]
offset_left = 240.0
offset_right = 280.0
offset_bottom = 40.0

[connection signal="food_seen" from="Bacteria" to="." method="_on_bacteria_food_seen"]
